<resources>
    <string name="app_name">PrimeTvInputApp</string>
    <string name="settings_signal_quality">信號品質</string>
    <string name="settings_signal_detecting_hint">信號偵測中，請稍後</string>
    <string name="settings_signal_detecting_hint_detecting">已偵測到信號,每秒更新中</string>
    <string name="settings_signal_detecting_hint_fail">無法偵測到信號，請確認同軸纜線是否有接妥</string>
    <string name="settings_signal_strength">信號強度</string>
    <string name="settings_channel_current_highlight">現正播放</string>
    <string name="settings_channel_current_hint">現正播放：</string>
    <string name="settings_channel_freq_scan">單頻點掃描</string>
    <string name="settings_channel_frequency">頻率</string>
    <string name="settings_channel_lock_title">請輸入 親子鎖 密碼</string>
    <string name="settings_channel_lock_title1">請輸入</string>
    <string name="settings_channel_lock_title2">密碼</string>
    <string name="settings_channel_prepare_scan_subtitle">請先檢查訊號源線路是否有接上數位機上盒，如果有即可開始操作</string>
    <string name="settings_channel_prepare_scan_title">手動頻道掃描</string>
    <string name="settings_channel_qam">QAM</string>
    <string name="settings_channel_scan">頻道掃描</string>
    <string name="settings_channel_scan_clear">清除</string>
    <string name="settings_channel_scan_failed">掃描失敗，沒有發現頻道，請確認Cable是否接妥</string>
    <string name="settings_channel_scan_no_signal">掃描失敗，無法偵測到信號，請確認Cable是否接妥</string>
    <string name="settings_channel_scan_reset">恢復預設值</string>
    <string name="settings_channel_scan_timeout">掃描失敗，超過30秒沒訊號反應，請確認Cable是否接妥</string>
    <string name="settings_channel_scanning_back">返回</string>
    <string name="settings_channel_scanning_completed">頻道掃描已完成</string>
    <string name="settings_channel_scanning_hint">頻道掃描中，請稍後</string>
    <string name="settings_channel_scanning_progress_hint">掃描進度</string>
    <string name="settings_channel_scanning_sub_hint_audio">個廣播電台</string>
    <string name="settings_channel_scanning_sub_hint_video">個頻道</string>
    <string name="settings_channel_signal_scan">信號偵測</string>
    <string name="settings_channel_symbol_rate">Symbol Rate</string>
    <string name="settings_channel_unlock_title1">請輸入頻道鎖密碼</string>
    <string name="settings_channel_unlock_title2">請輸入工程密碼</string>

    <string name="channel_current_highlight">現正播放</string>
    <string name="channel_current_hint">現正播放：</string>
    <string name="channel_freq_scan">單頻點掃描</string>
    <string name="channel_frequency">頻率</string>
    <string name="channel_lock_title">請輸入 親子鎖 密碼</string>
    <string name="channel_lock_title1">請輸入</string>
    <string name="channel_lock_title2">密碼</string>
    <string name="channel_prepare_scan_subtitle">請先檢查訊號源線路是否有接上數位機上盒，如果有即可開始操作</string>
    <string name="channel_prepare_scan_title">手動頻道掃描</string>
    <string name="channel_qam">QAM</string>
    <string name="channel_scan">頻道掃描</string>
    <string name="channel_scan_clear">清除</string>
    <string name="channel_scan_failed">掃描失敗，沒有發現頻道，請確認Cable是否接妥</string>
    <string name="channel_scan_no_signal">掃描失敗，無法偵測到信號，請確認Cable是否接妥</string>
    <string name="channel_scan_reset">恢復預設值</string>
    <string name="channel_scan_timeout">掃描失敗，超過30秒沒訊號反應，請確認Cable是否接妥</string>
    <string name="channel_scanning_back">返回</string>
    <string name="channel_scanning_completed">頻道掃描已完成</string>
    <string name="channel_scanning_hint">頻道掃描中，請稍後</string>
    <string name="channel_scanning_progress_hint">掃描進度</string>
    <string name="channel_scanning_sub_hint_audio">個廣播電台</string>
    <string name="channel_scanning_sub_hint_video">個頻道</string>
    <string name="channel_signal_scan">信號偵測</string>
    <string name="channel_symbol_rate">Symbol Rate</string>
    <string name="channel_unlock_title1">請輸入頻道鎖密碼</string>
    <string name="channel_unlock_title2">請輸入工程密碼</string>
    <string name="channel_next_step">下一步</string>

    <string name="settings_hint_rcu_dpad_select">選擇</string>
    <string name="hint_rcu_dpad_select">選擇</string>
</resources>