<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/block1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/lo_channel_pre_scanning_left_frame"
        android:layout_width="@dimen/lo_channel_pre_scanning_left_frame_width"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/lo_channel_pre_scanning_title"
            android:textSize="@dimen/lo_channel_pre_scanning_title_textsize"
            android:textColor="@android:color/white"
            android:text="@string/channel_prepare_scan_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lo_channel_pre_scanning_title_marginstart"/>
        <TextView
            android:id="@+id/lo_channel_pre_scanning_subtitle"
            android:textSize="@dimen/lo_channel_pre_scanning_subtitle_textsize"
            android:textColor="@android:color/white"
            android:text="@string/channel_prepare_scan_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lo_channel_pre_scanning_subtitle_margintop"
            android:layout_below="@id/lo_channel_pre_scanning_title"
            android:layout_alignStart="@id/lo_channel_pre_scanning_title"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lo_channel_pre_scanning_content"
        android:gravity="center"
        android:layout_width="@dimen/lo_channel_pre_scanning_content_width"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/lo_channel_pre_scanning_left_frame">

        <LinearLayout
            android:id="@+id/lo_channel_pre_scanning_scanframe"
            android:orientation="vertical"
            android:layout_width="@dimen/lo_channel_pre_scanning_scanframe_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lo_channel_pre_scanning_scanframe_marginstart"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true">
            <TextView
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/darker_gray"
                android:gravity="center_vertical"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_frequency"/>
            <TextView
                android:id="@+id/lo_channel_pre_scanning_frequency"
                android:textSize="@dimen/lo_channel_pre_scanning_frequency_textsize"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_frequency_margintop"/>
            <View
                android:id="@+id/lo_channel_pre_scanning_frequency_line"
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lo_channel_pre_scanning_frequency_line_height"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_frequency_line_margintop"/>
            <TextView
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/darker_gray"
                android:gravity="center_vertical"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_scanframe_title_margintop"
                android:text="@string/channel_symbol_rate"/>
            <TextView
                android:id="@+id/lo_channel_pre_scanning_symbolrate"
                android:textSize="@dimen/lo_channel_pre_scanning_frequency_textsize"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_frequency_margintop"/>
            <View
                android:id="@+id/lo_channel_pre_scanning_symbolrate_line"
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lo_channel_pre_scanning_frequency_line_height"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_frequency_line_margintop"/>
            <TextView
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/darker_gray"
                android:gravity="center_vertical"
                android:focusable="false"
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_scanframe_title_margintop"
                android:text="@string/channel_qam"/>
            <TextView
                android:id="@+id/lo_channel_pre_scanning_qam"
                android:textSize="@dimen/lo_channel_pre_scanning_frequency_textsize"
                android:textColor="@android:color/white"
                android:gravity="center_vertical"
                android:layout_gravity="center"
                android:focusable="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_frequency_margintop"/>
            <View
                android:id="@+id/lo_channel_pre_scanning_qam_line"
                android:background="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/lo_channel_pre_scanning_frequency_line_height"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_frequency_line_margintop"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/lo_channel_pre_scanning_delete_frame1"
            android:layout_width="@dimen/lo_channel_pre_scanning_delete_frame_width"
            android:layout_height="@dimen/lo_channel_pre_scanning_delete_frame_height"
            android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_frame_marginstart"
            android:layout_marginTop="@dimen/lo_channel_pre_scanning_delete_frame_margintop"
            android:layout_toEndOf="@id/lo_channel_pre_scanning_scanframe"
            android:layout_alignTop="@id/lo_channel_pre_scanning_scanframe">
            <ImageView
                android:id="@+id/lo_channel_pre_scanning_delete_hint_icon"
                android:layout_width="@dimen/lo_channel_pre_scanning_delete_hint_icon_width"
                android:layout_height="@dimen/lo_channel_pre_scanning_delete_hint_icon_height"
                android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_hint_icon_marginstart"
                android:src="@drawable/hint_blue"
                android:layout_centerVertical="true"/>
            <TextView
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_hint_icon_marginstart"
                android:text="@string/channel_scan_clear"
                android:layout_toEndOf="@id/lo_channel_pre_scanning_delete_hint_icon"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/lo_channel_pre_scanning_delete_frame2"
            android:layout_width="@dimen/lo_channel_pre_scanning_delete_frame_width"
            android:layout_height="@dimen/lo_channel_pre_scanning_delete_frame_height"
            android:visibility="gone"
            android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_frame_marginstart"
            android:layout_marginTop="@dimen/lo_channel_pre_scanning_delete_frame2_margintop"
            android:layout_toEndOf="@id/lo_channel_pre_scanning_scanframe"
            android:layout_alignTop="@id/lo_channel_pre_scanning_scanframe">
            <ImageView
                android:id="@+id/lo_channel_pre_scanning_delete_hint_icon2"
                android:layout_width="@dimen/lo_channel_pre_scanning_delete_hint_icon_width"
                android:layout_height="@dimen/lo_channel_pre_scanning_delete_hint_icon_height"
                android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_hint_icon_marginstart"
                android:src="@drawable/hint_blue"
                android:layout_centerVertical="true"/>
            <TextView
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_hint_icon_marginstart"
                android:text="@string/channel_scan_clear"
                android:layout_toEndOf="@id/lo_channel_pre_scanning_delete_hint_icon2"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/lo_channel_pre_scanning_qam_select_hint"
            android:layout_width="@dimen/lo_channel_pre_scanning_delete_frame_width"
            android:layout_height="@dimen/lo_channel_pre_scanning_delete_frame_height"
            android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_frame_marginstart"
            android:visibility="gone"
            android:layout_toEndOf="@id/lo_channel_pre_scanning_scanframe"
            android:layout_alignBottom="@id/lo_channel_pre_scanning_scanframe">
            <ImageView
                android:id="@+id/lo_channel_pre_scanning_qam_hint_icon"
                android:layout_width="@dimen/lo_channel_pre_scanning_delete_hint_icon_width"
                android:layout_height="@dimen/lo_channel_pre_scanning_delete_hint_icon_height"
                android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_hint_icon_marginstart"
                android:src="@drawable/hint_ok"
                android:layout_centerVertical="true"/>
            <TextView
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/lo_channel_pre_scanning_delete_hint_icon_marginstart"
                android:text="@string/hint_rcu_dpad_select"
                android:layout_toEndOf="@id/lo_channel_pre_scanning_qam_hint_icon"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/lo_channel_pre_scanning_right_frame"
        android:background="@android:color/black"
        android:layout_width="@dimen/lo_channel_pre_scanning_right_frame_width"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true">
            <TextView
                android:id="@+id/lo_channel_pre_scanning_channel_signal_scan"
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/mail_item_bg_focus"
                android:padding="@dimen/lo_channel_pre_scanning_channel_signal_scan_padding"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/channel_signal_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/lo_channel_pre_scanning_channel_signal_scan_marginend"
                android:layout_marginStart="@dimen/lo_channel_pre_scanning_channel_signal_scan_marginstart"/>
            <TextView
                android:id="@+id/lo_channel_pre_scanning_channel_scan"
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/mail_item_bg_focus"
                android:padding="@dimen/lo_channel_pre_scanning_channel_signal_scan_padding"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/channel_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_channel_signal_scan_margintop"
                android:layout_below="@id/lo_channel_pre_scanning_channel_signal_scan"
                android:layout_alignStart="@id/lo_channel_pre_scanning_channel_signal_scan"
                android:layout_alignEnd="@id/lo_channel_pre_scanning_channel_signal_scan"/>
            <TextView
                android:id="@+id/lo_channel_pre_scanning_channel_freq_scan"
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/mail_item_bg_focus"
                android:padding="@dimen/lo_channel_pre_scanning_channel_signal_scan_padding"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/channel_freq_scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_channel_signal_scan_margintop"
                android:layout_below="@id/lo_channel_pre_scanning_channel_scan"
                android:layout_alignStart="@id/lo_channel_pre_scanning_channel_signal_scan"
                android:layout_alignEnd="@id/lo_channel_pre_scanning_channel_signal_scan"/>
            <TextView
                android:id="@+id/lo_channel_pre_scanning_channel_scan_reset"
                android:textSize="@dimen/lo_channel_pre_scanning_scanframe_title_textsize"
                android:textColor="@android:color/white"
                android:gravity="center"
                android:background="@drawable/mail_item_bg_focus"
                android:padding="@dimen/lo_channel_pre_scanning_channel_signal_scan_padding"
                android:focusable="true"
                android:clickable="true"
                android:text="@string/channel_scan_reset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/lo_channel_pre_scanning_channel_signal_scan_margintop"
                android:layout_below="@id/lo_channel_pre_scanning_channel_freq_scan"
                android:layout_alignStart="@id/lo_channel_pre_scanning_channel_signal_scan"
                android:layout_alignEnd="@id/lo_channel_pre_scanning_channel_signal_scan"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>